--- a/style.css
+++ b/style.css
@@ -25,8 +25,8 @@ button{background-color: transparent;}
 
 /*메인 비주얼 영역*/
 
-.main_01{width:100%;height:100vh;background:url(images/main_01back.jpg) no-repeat;}
-.window_wrap{width:1765px;height:100vh;margin:0px auto;background:url(images/window_01.png) no-repeat center;}
+.main_01{width:100%;height:100vh;background:url(main_01back.jpg) no-repeat;}
+.window_wrap{width:1765px;height:100vh;margin:0px auto;background:url(window_01.png) no-repeat center;}
 .window_inwrap{width:1200px;margin:0 auto;}
 .tit{font-size:110px;text-align:center;padding-top:330px;letter-spacing:5px;}
 
@@ -44,12 +44,12 @@ button{background-color: transparent;}
 .obj_wrap>img:nth-child(5){margin-top:550px;left:150px;}
 .obj_wrap>img:nth-child(6){margin-top:350px;left:1720px;}
 
-.main_02{width:100%;height:100vh;background:url(images/window_02bak.jpg) no-repeat;}
-.main_03{width:100%;height:100vh;background:url(images/window_02bak.jpg) no-repeat;}
-.main_04{width:100%;height:100vh;background:url(images/window_02bak.jpg) no-repeat;}
-.main_05{width:100%;height:100vh;background:url(images/window_02bak.jpg) no-repeat;}
-.main_06{width:100%;height:100vh;background:url(images/window_02bak.jpg) no-repeat;}
-.window_wrap_02{width:1765px;height:100vh;margin:0px auto;background:url(images/window_0202.jpg) no-repeat center;}
+.main_02{width:100%;height:100vh;background:url(window_02bak.jpg) no-repeat;}
+.main_03{width:100%;height:100vh;background:url(window_02bak.jpg) no-repeat;}
+.main_04{width:100%;height:100vh;background:url(window_02bak.jpg) no-repeat;}
+.main_05{width:100%;height:100vh;background:url(window_02bak.jpg) no-repeat;}
+.main_06{width:100%;height:100vh;background:url(window_02bak.jpg) no-repeat;}
+.window_wrap_02{width:1765px;height:100vh;margin:0px auto;background:url(window_0202.jpg) no-repeat center;}
 
 .window_button2{width:220px;padding-top:100px;margin-left:1650px;}
 .window_button2>button{float:left;margin-right:14px;cursor:pointer;}
@@ -58,9 +58,9 @@ button{background-color: transparent;}
 
 .window_inwrap2>ul{margin:0 auto;width:1018px;}
 .window_inwrap2>ul>li{margin-top:35px;cursor:pointer;}
-.window_inwrap2>ul>li:nth-child(1){background:url(images/소개.png) no-repeat;width:306px; height:117px;margin-right:50px;float:left;}
-.window_inwrap2>ul>li:nth-child(2){background:url(images/커리어.png) no-repeat;width:306px; height:117px;margin-right:50px;float:left;}
-.window_inwrap2>ul>li:nth-child(3){background:url(images/메뉴포트폴리오.png) no-repeat;width:306px; height:117px;float:left;}
+.window_inwrap2>ul>li:nth-child(1){background:url(소개.png) no-repeat;width:306px; height:117px;margin-right:50px;float:left;}
+.window_inwrap2>ul>li:nth-child(2){background:url(커리어.png) no-repeat;width:306px; height:117px;margin-right:50px;float:left;}
+.window_inwrap2>ul>li:nth-child(3){background:url(메뉴포트폴리오.png) no-repeat;width:306px; height:117px;float:left;}
 
 .obj_wrap2>img{position:absolute;}
 .obj_wrap2>img:nth-child(1){top:1200px;left:150px;}
@@ -68,11 +68,11 @@ button{background-color: transparent;}
 
 .window_inwrap3{width:1200px;margin:0 auto;}
 .window_inwrap3_img{float:left;margin-top:110px;}
-.window_inwrap3>div>h3{margin-top:140px;font-size:35px;background:url(images/bar.png) no-repeat;float:right;width:545px;text-align:right;height:65px; background-position:right bottom;}
+.window_inwrap3>div>h3{margin-top:140px;font-size:35px;background:url(bar.png) no-repeat;float:right;width:545px;text-align:right;height:65px; background-position:right bottom;}
 .window_inwrap3>div>p{font-size:18px;float:right;text-align:right;margin-top:30px;} 
 .window_inwrap3>div>p>b{}             
 
-.side_button_01{float:right;background:url(images/sidebar.png) no-repeat;height:705px;margin-top:77px;position:absolute;margin-left:1680px;}
+.side_button_01{float:right;background:url(sidebar.png) no-repeat;height:705px;margin-top:77px;position:absolute;margin-left:1680px;}
 .up1{margin-top:-705px;position:absolute;cursor:pointer;}
 .down1{margin-top:656px;cursor:pointer;margin-left:-6px;}
 .up2{margin-top:-705px;position:absolute;cursor:pointer;}
@@ -82,14 +82,14 @@ button{background-color: transparent;}
 .up4{margin-top:-705px;position:absolute;cursor:pointer;}
 .down4{margin-top:656px;cursor:pointer;margin-left:-6px;}
 
-.side_button_02{float:right;background:url(images/sidebar_02.png) no-repeat;height:705px;margin-top:77px;position:absolute;margin-left:1680px;}
+.side_button_02{float:right;background:url(sidebar_02.png) no-repeat;height:705px;margin-top:77px;position:absolute;margin-left:1680px;}
 
-.side_button_03{float:right;background:url(images/sidebar_03.png) no-repeat;height:705px;margin-top:77px;position:absolute;margin-left:1680px;}
+.side_button_03{float:right;background:url(idebar_03.png) no-repeat;height:705px;margin-top:77px;position:absolute;margin-left:1680px;}
 
-.side_button_04{float:right;background:url(images/sidebar_04.png) no-repeat;height:705px;margin-top:77px;position:absolute;margin-left:1680px;}
+.side_button_04{float:right;background:url(isidebar_04.png) no-repeat;height:705px;margin-top:77px;position:absolute;margin-left:1680px;}
 
 .window_inwrap4{width:1200px;margin:0 auto;}
-.window_inwrap4>h3{margin-top:140px;font-size:35px;background:url(images/bar.png) no-repeat;float:left;width:545px;text-align:left;height:65px; background-position:right bottom;}
+.window_inwrap4>h3{margin-top:140px;font-size:35px;background:url(bar.png) no-repeat;float:left;width:545px;text-align:left;height:65px; background-position:right bottom;}
 .window_inwrap4>div{float:left;}
-.window_inwrap4>div>div{font-size:18px;margin-top:40px;background:url(images/폴더.png) no-repeat;height:87px;width:140px;float:left;margin-right:40px;cursor:pointer;} 
+.window_inwrap4>div>div{font-size:18px;margin-top:40px;background:url(폴더.png) no-repeat;height:87px;width:140px;float:left;margin-right:40px;cursor:pointer;} 
 .window_inwrap4>div>div>b>div{padding-top:95px;text-align:center;}
