--- a/style.css
+++ b/style.css
@@ -25,33 +25,35 @@ button{background-color: transparent;}
 
 /*메인 비주얼 영역*/
 
-.main_01{width:100%;height:100vh;background:url(./main_01back.jpg) no-repeat;}
-.window_wrap{width:1765px;height:100vh;margin:0px auto;background:url(./window_01.png) no-repeat center;}
+.main_01{width:100%;height:980px;background:url(./main_01back.jpg) no-repeat center / cover;}
+.window_wrap{width:1765px;height:100%;margin:0px auto;background:url(./window_01.png) no-repeat center;position:relative;}
 .window_inwrap{width:1200px;margin:0 auto;}
-.tit{font-size:110px;text-align:center;padding-top:330px;letter-spacing:5px;}
+.tit{font-size:110px;text-align:center;padding-top:310px;letter-spacing:5px;}
 
 .scroll{margin:0 auto;width:1200px;margin-top:100px;}
 .scroll>img{text-align:center;cursor:pointer;}
 
-.window_button{width:220px;padding-top:70px;margin-left:1620px;}
+.window_button{width:220px;padding-top:77px;margin-left:1620px;}
 .window_button>button{float:left;margin-right:14px;cursor:pointer;}
+.wbtn2{}
 
-.obj_wrap>img{position:absolute;}
-.obj_wrap>img:nth-child(1){margin-top:610px;left:1550px;}
-.obj_wrap>img:nth-child(2){margin-top:520px;left:1580px;}
-.obj_wrap>img:nth-child(3){margin-top:150px;left:1580px;}
-.obj_wrap>img:nth-child(4){margin-top:150px;left:150px;}
-.obj_wrap>img:nth-child(5){margin-top:550px;left:150px;}
-.obj_wrap>img:nth-child(6){margin-top:350px;left:1720px;}
+.obj_wrap{}
+.obj_wrap>img{position:absolute;left:50%;}
+.obj_wrap>img:nth-child(1){margin-top:610px;left:1420px;}
+.obj_wrap>img:nth-child(2){margin-top:520px;left:1480px;}
+.obj_wrap>img:nth-child(3){margin-top:150px;left:1480px;}
+.obj_wrap>img:nth-child(4){margin-top:150px;left:120px;}
+.obj_wrap>img:nth-child(5){margin-top:550px;left:120px;}
+.obj_wrap>img:nth-child(6){margin-top:350px;left:1620px;}
 
-.main_02{width:100%;height:100vh;background:url(./window_02bak.jpg) no-repeat;}
-.main_03{width:100%;height:100vh;background:url(./window_02bak.jpg) no-repeat;}
-.main_04{width:100%;height:100vh;background:url(./window_02bak.jpg) no-repeat;}
-.main_05{width:100%;height:100vh;background:url(./window_02bak.jpg) no-repeat;}
-.main_06{width:100%;height:100vh;background:url(./window_02bak.jpg) no-repeat;}
-.window_wrap_02{width:1765px;height:100vh;margin:0px auto;background:url(./window_0202.jpg) no-repeat center;}
+.main_02{width:100%;height:980px;background:url(./window_02bak.jpg)  no-repeat center / cover;}
+.main_03{width:100%;height:980px;background:url(./window_02bak.jpg)  no-repeat center / cover;}
+.main_04{width:100%;height:980px;background:url(./window_02bak.jpg)  no-repeat center / cover;}
+.main_05{width:100%;height:980px;background:url(./window_02bak.jpg)  no-repeat center / cover;}
+.main_06{width:100%;height:980px;background:url(./window_02bak.jpg)  no-repeat center / cover;}
+.window_wrap_02{width:1765px;height:100%;margin:0px auto;background:url(./window_0202.jpg) no-repeat center;position:relative;}
 
-.window_button2{width:220px;padding-top:100px;margin-left:1650px;}
+.window_button2{width:220px;padding-top:105px;margin-left:1650px;}
 .window_button2>button{float:left;margin-right:14px;cursor:pointer;}
 .window_inwrap2_img{width:1016px;height:435px;margin:0 auto;text-align:center;padding-top:50px;}
 .window_inwrap2{width:1200px;margin:0 auto;text-align:center;}
@@ -62,9 +64,9 @@ button{background-color: transparent;}
 .window_inwrap2>ul>li:nth-child(2){background:url(./커리어.png) no-repeat;width:306px; height:117px;margin-right:50px;float:left;}
 .window_inwrap2>ul>li:nth-child(3){background:url(./메뉴포트폴리오.png) no-repeat;width:306px; height:117px;float:left;}
 
-.obj_wrap2>img{position:absolute;}
-.obj_wrap2>img:nth-child(1){top:1200px;left:150px;}
-.obj_wrap2>img:nth-child(2){top:1720px;left:1650px;}
+.obj_wrap2>img{position:absolute;left:50%;}
+.obj_wrap2>img:nth-child(1){margin-top:210px;left:80px;}
+.obj_wrap2>img:nth-child(2){margin-top:650px;left:1580px;}
 
 .window_inwrap3{width:1200px;margin:0 auto;}
 .window_inwrap3_img{float:left;margin-top:110px;}
@@ -74,13 +76,13 @@ button{background-color: transparent;}
 
 .side_button_01{float:right;background:url(./sidebar.png) no-repeat;height:705px;margin-top:77px;position:absolute;margin-left:1680px;}
 .up1{margin-top:-705px;position:absolute;cursor:pointer;}
-.down1{margin-top:656px;cursor:pointer;margin-left:-6px;}
+.down1{margin-top:656px;cursor:pointer;margin-left:-5px;}
 .up2{margin-top:-705px;position:absolute;cursor:pointer;}
-.down2{margin-top:656px;cursor:pointer;margin-left:-6px;}
+.down2{margin-top:656px;cursor:pointer;margin-left:-5px;}
 .up3{margin-top:-705px;position:absolute;cursor:pointer;}
-.down3{margin-top:656px;cursor:pointer;margin-left:-6px;}
+.down3{margin-top:656px;cursor:pointer;margin-left:-5px;}
 .up4{margin-top:-705px;position:absolute;cursor:pointer;}
-.down4{margin-top:656px;cursor:pointer;margin-left:-6px;}
+.down4{margin-top:656px;cursor:pointer;margin-left:-5px;}
 
 .side_button_02{float:right;background:url(./sidebar_02.png) no-repeat;height:705px;margin-top:77px;position:absolute;margin-left:1680px;}
 
@@ -91,5 +93,5 @@ button{background-color: transparent;}
 .window_inwrap4{width:1200px;margin:0 auto;}
 .window_inwrap4>h3{margin-top:140px;font-size:35px;background:url(./bar.png) no-repeat;float:left;width:545px;text-align:left;height:65px; background-position:right bottom;}
 .window_inwrap4>div{float:left;}
-.window_inwrap4>div>div{font-size:18px;margin-top:40px;background:url(./폴더.png) no-repeat;height:87px;width:140px;float:left;margin-right:40px;cursor:pointer;} 
-.window_inwrap4>div>div>b>div{padding-top:95px;text-align:center;}
+.window_inwrap4>div>a>div{font-size:18px;margin-top:40px;background:url(./폴더.png) no-repeat;height:87px;width:140px;float:left;margin-right:40px;cursor:pointer;} 
+.window_inwrap4>div>a>div>b>div{padding-top:95px;text-align:center;}
